lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:12: error: ')' expected but '}' found.
		}
                ^