lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.code
def getLandingZone():Segment = {

	var c = 0

	var point1 = new Point(0,0)

	while ( c <  getSol.length)
	{
		if (getSol(c).y == getSol(c + 1).y )
		{
			if (get(x
		}
		
		c = c + 1
	}

	
	return new Segment(new Point(0.1, 5.1), new Point(2.1,5.7));
}
